--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,11 @@
 
 <head>
     <title>2cast.tv</title>
+    <script src="app.bundle.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale = 1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-            crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" rel="stylesheet">
     <script src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
-    <script src="bundle.js"></script>
 </head>
 
 <body>
@@ -45,7 +37,7 @@
         <div class="elem">
             <div><span class="caption-large" style="padding-left: 20%;">STEP 1: </span><span class="caption-medium" style="vertical-align: top;">Scan the QR Code below*</span></div>
             <div class="img-text">
-                <img src="images/placeholder.png" alt="Loading QR Code" id="qr-code" class="qr-img img-fluid"/>
+                <img src="placeholder.png" alt="Loading QR Code" id="qr-code" class="qr-img img-fluid"/>
             </div>
         </div>
         <div class="elem">
@@ -89,7 +81,7 @@
                         return response.json();
                     } else {
                         var image = document.getElementById('qr-code');
-                        image.src = "../common/images/placeholder.png";
+                        image.src = "placeholder.png";
                         document.getElementById("code-span").textContent = "";
                     }
                 })
